fixing folder issue

--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>giphyAPI</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
-
+    <link rel="stylesheet" href="/assests/css/style.css" />
 
     <script src="https://code.jquery.com/jquery.js"></script>
-
-</head>
-<body>
-    <div> 
-        <h1>Animal Giphy Search!</h1>
+  </head>
+  <body>
+    <div>
+      <h1>Animal Giphy Search!</h1>
     </div>
     <div class="container">
-        <div class="input">
-            <input type="text"
-            id = "inputBox"
-            placeholder="Type in the name of Animal Here"
-            />
-            <button type="submit" id="animalBtn">More Animals!</button>
-        </div>
-        <div id="exampleBtn"></div>
-
-        <div id="newBtns"></div>
+      <div class="input">
+        <input
+          type="text"
+          id="inputBox"
+          placeholder="Type in the name of Animal Here"
+        />
+      </div>
+      <div>
+        <button type="submit" id="animalBtn">More Animals!</button>
+      </div>
     </div>
 
+    <div>
+      <div id="exampleBtn"></div>
+    </div>
 
-    <script src="/assets/javascript/app.js"></script>
-</body>
+    <div id="animalZone"></div>
+
+    <script src="/assests/javascript/app.js"></script>
+  </body>
 </html>
