--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>giphyAPI</title>
-    <link rel="stylesheet" href="/assests/css/style.css" />
+    <link rel="stylesheet" href="assests/css/style.css" />
 
     <script src="https://code.jquery.com/jquery.js"></script>
   </head>
@@ -32,6 +32,6 @@
 
     <div id="animalZone"></div>
 
-    <script src="/assests/javascript/app.js"></script>
+    <script src="assests/javascript/app.js"></script>
   </body>
 </html>
